test: 테스트코드 일관성 유지